# django-cte-stubs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml  run_mypy_examples.py  setup.py
django_cte-stubs/: __init__.pyi  cte.pyi  expressions.pyi  jitmixin.pyi  join.pyi  meta.pyi  query.pyi  raw.pyi
django_cte_stubs/: cte.pyi  expressions.pyi  join.pyi  meta.pyi  query.pyi  raw.pyi
mypy_django_cte_plugin/: __init__.py  main.py
tests/: requirements.in
tests/project/: manage.py
tests/project/examples/: __init__.py  as_manager.py  custom_query_set.py  custom_query_set.txt  join.py  join.txt  named_common_table.py  named_common_table.txt  raw.py  raw.txt  recursive_example.py  recursive_example.txt  simple.py  simple.txt  simple_typed.py
tests/project/myapp/: __init__.py  apps.py  models.py
tests/project/myapp/migrations/: 0001_initial.py  __init__.py
tests/project/project/: __init__.py  settings.py  urls.py
tests/project/tests/: __init__.py  as_manager.py  cte_example.py  named.py  raw.py  recursive_example.py  simple.py
